@@ -1,6 +1,7 @@
 Revision history for Perl extension Metabrik.
 
 1.12
+   - UPDATE: Metabrik: brik_preinit, brik_init and brik_fini are now official Commands
    - bugfix: shell::rc, shell::script: add a trailing whitespace on multilines
 
 1.11 Sun Nov 22 17:46:43 CET 2015
